# artifacts/api-server/src/routes/index.ts
@@ -1,10 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
 import vendorsRouter from "./vendors";
+import uploadLinksRouter from "./upload-links";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
 router.use(vendorsRouter);
+router.use(uploadLinksRouter);
 
 export default router;
